fix: menu svg color on dark mode

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -39,8 +39,7 @@
 }
 
 svg,
-svg path,
-svg rect {
+svg path {
   fill: currentColor;
 }
 
